# EEngine

./: .gitignore  .gitmodules  CMakeLists.txt  EEngine.apng  README.md  imgui.ini  main.cpp  msvc_modules.cmake
Engine/: CMakeLists.txt
Engine/src/: EEngine.Application_Application.ixx  EEngine.Application_Input.ixx  EEngine.Editor.ixx  EEngine.Event_Application.ixx  EEngine.Event_Keyboard.ixx  EEngine.Rendering.ixx  EEngine.Rendering_GraphicsContext.ixx  EEngine.Rendering_Renderer.cpp  EEngine.Rendering_Shader.cpp  EEngine.Rendering_Shader.ixx  EEngine.Rendering_VertexArray.ixx  EEngine.Rendering_VertexBuffer.cpp  EEngine.hpp  EEngine.ixx  EEnginePCH.hpp
Engine/src/Application/: EEngine.Application.ixx  EEngine.Application_Application.ixx  EEngine.Application_CameraController.ixx  EEngine.Application_IMGUILayer.cpp  EEngine.Application_IMGUILayer.ixx  EEngine.Application_Input.cpp  EEngine.Application_Input.ixx  EEngine.Application_Layer.ixx  EEngine.Application_Window.cpp  EEngine.Application_Window.ixx
Engine/src/Core/: Core.hpp  EEngine.Core.ixx  EEngine.Core_Log.ixx  EEngine.Core_Platform.ixx  EEngine.Core_Time.ixx
Engine/src/ECS/: EEngine.ECS.ixx  EEngine.ECS_Component.ixx  EEngine.ECS_ComponentPool.ixx  EEngine.ECS_Entity.cpp  EEngine.ECS_Entity.ixx  EEngine.ECS_Registry.ixx  EEngine.ECS_Scene.cpp  EEngine.ECS_Scene.ixx
Engine/src/Event/: EEngine.Event.ixx  EEngine.Event_Application.ixx  EEngine.Event_Base.ixx  EEngine.Event_Keyboard.ixx  EEngine.Event_Mouse.ixx  Event.hpp
Engine/src/Math/: EEngine.Math.ixx  EEngine.Math_Spatial.ixx  EEngine.Math_Transform.cpp  EEngine.Math_Transform.ixx
Engine/src/Platform/OpenGL/: OpenGLBuffer.cpp  OpenGLBuffer.hpp  OpenGLContext.cpp  OpenGLContext.hpp  OpenGLRendererAPI.cpp  OpenGLRendererAPI.hpp  OpenGLShader.cpp  OpenGLShader.hpp  OpenGLTexture.cpp  OpenGLTexture.hpp  OpenGLVertexArray.cpp  OpenGLVertexArray.hpp
Engine/src/Platform/Windows/: WindowsInput.cpp  WindowsInput.hpp  WindowsWindow.cpp  WindowsWindow.hpp
Engine/src/Profiling/: EEngine.Profiling.ixx  Profiling.hpp
Engine/src/Rendering/: EEngine.Rendering.ixx  EEngine.Rendering_API.ixx  EEngine.Rendering_Camera.cpp  EEngine.Rendering_Camera.ixx  EEngine.Rendering_GraphicsContext.ixx  EEngine.Rendering_Renderer.cpp  EEngine.Rendering_Renderer.ixx  EEngine.Rendering_RendererAPI.cpp  EEngine.Rendering_RendererAPI.ixx  EEngine.Rendering_Shader.cpp  EEngine.Rendering_Shader.ixx  EEngine.Rendering_Texture.cpp  EEngine.Rendering_Texture.ixx  EEngine.Rendering_UniformBuffer.cpp  EEngine.Rendering_UniformBuffer.ixx  EEngine.Rendering_VertexArray.cpp  EEngine.Rendering_VertexBuffer.ixx
Engine/src/Standard/: EEngine.Standard.ixx
Engine/src/engine/: Application.cpp  Application.hpp  CameraController.cpp  CameraController.hpp  Core.hpp  EEngine.Application-Application.ixx  EEngine.Application-CameraController.ixx  EEngine.Application-IMGUILayer.ixx  EEngine.Application-Input.ixx  EEngine.Application-Layer.ixx  EEngine.Application-Window.ixx  EEngine.Application.ixx  EEngine.Application_Application.ixx  EEngine.Application_Window.ixx  EEngine.Core-Input.ixx  EEngine.Core-Log.ixx  EEngine.Core-Memory.ixx  EEngine.Core-Time.ixx  EEngine.Core.ixx  EEngine.Core_Memory.ixx  EEngine.Editor.ixx  EEngine.Event-Base.ixx  EEngine.Event-Mouse.ixx  EEngine.Event.ixx  EEngine.Math.ixx  EEngine.Rendering-API.ixx  EEngine.Rendering-Buffers.ixx  EEngine.Rendering-Interfaces.ixx  EEngine.Rendering-OpenGL.ixx  EEngine.Rendering-Renderer.ixx  EEngine.Rendering-Renderer2D.ixx  EEngine.Rendering.ixx  EEngine.Rendering_API.ixx  EEngine.Rendering_Buffers.ixx  EEngine.Rendering_GraphicsContext.cpp  EEngine.Rendering_GraphicsContext.ixx  EEngine.Rendering_IndexBuffer.cpp  EEngine.Rendering_IndexBuffer.ixx  EEngine.Rendering_Interfaces.ixx  EEngine.Rendering_OpenGL.ixx  (+28 more)
Engine/src/engine/Application/: Application.cpp  Application.ixx  CameraController.cpp  CameraController.ixx  EEngine.Application.ixx  IInput.ixx  IWindow.ixx  Input.ixx  Layer.cpp  Layer.ixx  LayerStack.cpp  LayerStack.ixx  TBD.ixx
Engine/src/engine/Application/IMGUI/: IMGUILayer.cpp  IMGUILayer.ixx
Engine/src/engine/Application/Windows/: WindowsInput.cpp  WindowsInput.ixx  WindowsWindow.cpp  WindowsWindow.ixx
Engine/src/engine/Core/: Core.hpp  Core.ixx  EEngine.Core.ixx  IInput.ixx  Input.ixx  KeyCode.ixx  Log.cpp  Log.ixx  MouseButtonCode.ixx  Timestep.hpp  Timestep.ixx
Engine/src/engine/Event/: ApplicationEvent.ixx  EEngine.Event.ixx  Event.ixx  KeyEvent.ixx  MouseEvent.ixx
Engine/src/engine/Events/: ApplicationEvent.hpp  Event.hpp  KeyEvent.hpp  MouseEvent.hpp
Engine/src/engine/Profiling/: EEngine.Profiling.ixx
Engine/src/engine/Renderer/: Buffer.cpp  Buffer.hpp  Camera.cpp  Camera.hpp  GraphicsContext.hpp  IGraphicsContext.hpp  IRendererAPI.hpp  IShader.cpp  IShader.hpp  ITexture.cpp  ITexture.hpp  IVertexArray.cpp  IVertexArray.hpp  Renderer.cpp  Renderer.hpp  RendererAPI.cpp  RendererAPI.hpp  Shader.cpp  Shader.hpp  VertexArray.cpp  VertexArray.hpp
Engine/src/engine/Rendering/: API.ixx  Buffer.cpp  Buffer.ixx  Camera.cpp  Camera.ixx  EEngine.Rendering.ixx  IGraphicsContext.ixx  IRendererAPI.ixx  IShader.ixx  ITexture.ixx  IVertexArray.ixx  Renderer.cpp  Renderer.ixx  Renderer2D.ixx  RendererAPI.cpp  RendererAPI.ixx  ShaderLibrary.cpp  ShaderLibrary.ixx
Engine/src/engine/Rendering/OpenGL/: OpenGLBuffer.cpp  OpenGLBuffer.ixx  OpenGLContext.cpp  OpenGLContext.ixx  OpenGLRendererAPI.cpp  OpenGLRendererAPI.ixx  OpenGLShader.cpp  OpenGLShader.ixx  OpenGLTexture.cpp  OpenGLTexture.ixx  OpenGLVertexArray.cpp  OpenGLVertexArray.ixx
Engine/src/engine/imgui/: IMGUILayer.cpp  IMGUILayer.hpp
Runner/: CMakeLists.txt
Runner/assets/shaders/: Blinn-Phong.glsl  FlatColor.glsl  ShadowDepth.glsl  Texture.glsl  ToneMap.glsl
Runner/src/: Main.ixx  Runner.cpp  Runner.ixx  RunnerApp.ixx  RunnerLayer2D.ixx  RunnerLayer3D.ixx
